landing page + bug fixes
landing page
-code cleanup
-removed carrier
-rearranged shit

bugs
-no more horizontal scroll on any pages

--- a/questr/static/css/index.css
+++ b/questr/static/css/index.css
@@ -11,9 +11,6 @@ body{
 	color:rgba(0,0,0,0.8);
 	}
 	
-strong,b{
-	font-weight:600;
-	}
 
 	a:hover {
 		text-decoration: none;
@@ -22,7 +19,7 @@ strong,b{
 h1{font-size:50px;line-height:60px;margin:25px 0;font-weight: 100;}
 h2{font-size:40px;margin:15px 0;font-weight: 200;}
 h3{font-size:20px;margin:10px 0;font-weight:200;}
-h4{font-size:20px;margin:10px 0;font-weight:400;color: #656565;}
+h4{font-size:20px;margin:10px 0;font-weight:400;color: white;}
 h5{font-size:28px;font-weight:400;margin:15px 0;color:#384047;}
 h6{font-size:16px;font-weight:400;margin:10px 0;color:#384047;}
 p{font-size: 16px;font-weight: 300;margin: 7px 0;color: #666;}
@@ -55,25 +52,12 @@ p{font-size: 16px;font-weight: 300;margin: 7px 0;color: #666;}
 
 
 .grey-transition {
-	-moz-filter: saturate(100%) grayscale(100%) brightness(100%) contrast(100%);
-    -o-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
-     -webkit-filter: saturate(100%) grayscale(100%) brightness(100%) contrast(100%);
-     filter: gray;
-     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
-
-    -webkit-transition: 0.1s; /* For Safari 3.1 to 6.0 */
-    transition:  0.1s;
+	-webkit-filter: grayscale(100%);
+-moz-filter: grayscale(100%);
+filter: grayscale(100%);
+opacity: 0.4;
 }
 
-.grey-transition:hover {
-	-webkit-filter: grayscale(0%);
-	-moz-filter: grayscale(0%);
-	filter: grayscale(0%);
-	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\' filterRes=\'800\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
-    
-    -webkit-transition: 0.1s; /* For Safari 3.1 to 6.0 */
-    transition:  0.1s;
-}
 
 .blacknwhite {
 	-webkit-filter: saturate(100%) grayscale(100%) brightness(80%) contrast(100%);
@@ -618,4 +602,8 @@ button{outline: 0;}
             }
            
 
+
+.navbar {
+	margin: 0;
+}
 
