--- a/questr/static/css/theme.css
+++ b/questr/static/css/theme.css
@@ -35,6 +35,11 @@ display: block;
 	margin: 0;
 	padding: 0;
 }
+
+html, body {
+	overflow-x: hidden;
+	max-width: 100%; 
+}
  
 body {
 	background-color: #f5f5f5;
